fix includes section style on pricing page on mobile

--- a/static/src/styles/pages/_pricing.scss
+++ b/static/src/styles/pages/_pricing.scss
@@ -74,7 +74,6 @@
     .includesList {
       display: flex;
       flex-direction: column;
-      align-items: center;
       margin-top: 95px;
 
       @media (min-width: $vs-breakpoint-md) {
